apps/http-echo/overlays/uat/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  replicas: 2
